src/test/deca/context/invalid/object/badNew1.deca
class Y
{

}
class X
{
  int a;
  boolean b = true;
}


class B
{
  X x = new int();
  Y y = new Y();
  float a;

}
